[package]
name = "flow-gpts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-openai-wasi = "0.16.3"
discord-flows = "0.6.3"
flowsnet-platform-sdk = "0.1.6"
log = "0.4.20"
serde_json = "1.0.108"
tokio_wasi = "1.25.2"
webhook-flows = "0.4.4"
